fix: 1. Картинка отображается по ширине дисплея 2. Высота канваса соотвествует размеру картинки

--- a/templates/grabcut_demo.html
+++ b/templates/grabcut_demo.html
@@ -15,11 +15,11 @@
           background-color: grey;
         }
         .grabcut_row {
-          border: 1px solid grey;
+          border: 0px solid grey; <!-- окантовка -->
           border-radius: 15px;
           padding-top: 20px;
           padding-bottom: 20px;
-          margin: 15px;
+          margin: 0px;
         }
         .title {
           padding: 15px;
