--- a/templates/grabcut_demo.html
+++ b/templates/grabcut_demo.html
@@ -10,8 +10,8 @@
       <script type="text/javascript" src="{{ url_for('static', filename='js/grabcut_demo.js') }}"></script> 
       <style type="text/css">
         .grabcut_res {
-          max-height: 300px;
-          max-width:300px;
+          max-width: 100%;
+          height: auto;
           background-color: grey;
         }
         .grabcut_row {
@@ -50,5 +50,4 @@
         <div id="appending_container"></div>
     </div>
     </body>
-
 </html>
